objects/ComponentParameter__c.object
<CustomObject>
    <description>Fielo Component segmented parameters</description>
    <fields>
        <fullName>AreaOfFocusDefaultValue__c</fullName>
        <label>Area Of Focus Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AreaOfFocusExcludeValues__c</fullName>
        <label>Area Of Focus Exclude Values</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AreaOfFocusIncludeValues__c</fullName>
        <label>Area Of Focus Include Values</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BottomLabel__c</fullName>
        <defaultValue>&apos;FieloPRM_PartnerLocatorBottomText&apos;</defaultValue>
        <inlineHelpText>Use existant Custom Label</inlineHelpText>
        <label>Bottom Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BottomLink__c</fullName>
        <inlineHelpText>The link to the other PL Form</inlineHelpText>
        <label>Bottom Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>BusinessTypeDefaultValue__c</fullName>
        <label>Business Type Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessTypeExcludeValues__c</fullName>
        <label>Business Type Exclude Values</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BusinessTypeIncludeValues__c</fullName>
        <inlineHelpText>Enter a value by line (you have to choose only one field to fill between Include and Exclude</inlineHelpText>
        <label>Business Type Include Values</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BusinessTypeValues__c</fullName>
        <label>Business Type Values</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <description>The Fielo Component</description>
        <label>Component</label>
        <referenceTo>FieloEE__Component__c</referenceTo>
        <relationshipName>Component_Parameters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DistanceUnitValues__c</fullName>
        <description>Possible values (line break after each value)</description>
        <label>Distance unit values</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DistanceValues__c</fullName>
        <label>Distance values</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HeaderParameter__c</fullName>
        <description>?header=none
?header=prm_is_on</description>
        <label>Header parameter</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocatorParameter__c</fullName>
        <defaultValue>&apos;networking&apos;</defaultValue>
        <description>To be set in the form parameter to send to Partner Locator: ?locator=networking</description>
        <label>Locator Parameter</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Segment</label>
        <referenceTo>FieloEE__RedemptionRule__c</referenceTo>
        <relationshipName>Component_Parameters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShowBusinessTypeAndAreaOfFocus__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Business Type And Area of Focus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubmitURL__c</fullName>
        <defaultValue>&apos;https://m-partnerlocator-int.btsec.dev.schneider-electric.com/newdesktop/index.jsp&apos;</defaultValue>
        <label>Submit URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Subtitle__c</fullName>
        <defaultValue>&apos;FieloPRM_PartnerLocatorSubTitle&apos;</defaultValue>
        <inlineHelpText>Use existant Custom Label</inlineHelpText>
        <label>Subtitle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <defaultValue>&apos;FieloPRM_PartnerLocatorTitle&apos;</defaultValue>
        <inlineHelpText>Use existant Custom Label</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Component Parameters Segements</label>
    <nameField>
        <displayFormat>CP-{0000}</displayFormat>
        <label>Component Parameters Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Component Parameters Segements</pluralLabel>
    <recordTypes>
        <fullName>FieloPRM_C_PartnerLocatorForm</fullName>
        <active>true</active>
        <label>FieloPRM_C_PartnerLocatorForm</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Include_And_Exclude</fullName>
        <active>true</active>
        <description>Not possible to use Include and Exclude list at the same time</description>
        <errorConditionFormula>AND(NOT($User.BypassVR__c),
(BusinessTypeIncludeValues__c != null &amp;&amp; BusinessTypeExcludeValues__c !=null) || (AreaOfFocusIncludeValues__c!= null &amp;&amp; AreaOfFocusExcludeValues__c!=null))</errorConditionFormula>
        <errorMessage>Not possible to use Include and Exclude lists at the same time!</errorMessage>
    </validationRules>
</CustomObject>